refactor: token generation modue
