# docs/swagger.yaml
@@ -1,5 +1,14 @@
 basePath: /
 definitions:
+  http.authSession:
+    properties:
+      expires_at:
+        example: "2025-09-14T21:00:00Z"
+        type: string
+      token:
+        example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+        type: string
+    type: object
   http.loginRequest:
     properties:
       email:
@@ -11,15 +20,6 @@ definitions:
     required:
     - email
     - password
-    type: object
-  http.loginResponse:
-    properties:
-      expires_at:
-        example: "2025-09-14T21:00:00Z"
-        type: string
-      token:
-        example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
-        type: string
     type: object
   http.registerRequest:
     properties:
@@ -58,7 +58,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/http.loginResponse'
+            $ref: '#/definitions/http.authSession'
         "400":
           description: Bad Request
           schema: {}
@@ -86,7 +86,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/http.loginResponse'
+            $ref: '#/definitions/http.authSession'
         "400":
           description: Bad Request
           schema: {}
